samples/_failures_safe/1761422066_29da24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d34b6e0.c: In function ‘main’:
./samples/SAFE/__tmp_1d34b6e0.c:146:16: error: missing terminating " character
  146 |         printf("No valid log entries
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1d34b6e0.c:146:9: error: expected expression at end of input
  146 |         printf("No valid log entries
      |         ^~~~~~
./samples/SAFE/__tmp_1d34b6e0.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d34b6e0.c:146:9: error: expected declaration or statement at end of input
